# hosts_tool

./: .gitignore  .nvmrc  README.md  biome.jsonc  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: core.rs  main.rs  setup.rs
src-tauri/src/core/: conf.rs  constants.rs  error.rs  group.rs  id.rs  init.rs  system_hosts.rs  util.rs
src/components/BaseTitleBar/: index.tsx
src/components/CodeEditor/: highlight.ts  index.tsx
src/components/GroupEditor/: index.tsx
src/components/Icon/: index.tsx
src/components/editor/: index.tsx
src/hooks/: use-toast.ts  useGroupList.ts
src/layout/MainLayout/: index.tsx
src/layout/Sidebar/: Item.tsx  index.tsx
src/layout/Titlebar/: index.tsx
src/lib/: ipc.ts  logger.ts
src/store/: index.ts
src/styles/: index.less
